AudioNode.connect(): First parameter should not be nullable https://bugs.webkit.org/show_bug.cgi?id=163773

Reviewed by Darin Adler.

Source/WebCore:

AudioNode.connect()'s first parameter should not be nullable:
- https://webaudio.github.io/web-audio-api/#idl-def-AudioNode.

We were throwing a SYNTAX_ERR when passing null, we now throw
a TypeError instead.

No new tests, updated existing test.

* Modules/webaudio/AudioBasicInspectorNode.cpp:
(WebCore::AudioBasicInspectorNode::connect):
* Modules/webaudio/AudioBasicInspectorNode.h:
* Modules/webaudio/AudioNode.cpp:
(WebCore::AudioNode::connect):
* Modules/webaudio/AudioNode.h:
* Modules/webaudio/AudioNode.idl:

LayoutTests:

Improve test coverage.

* webaudio/audionode-expected.txt:
* webaudio/audionode.html:


Canonical link: https://commits.webkit.org/181552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207672 268f45cc-cd09-0410-ab3c-d52691b4dbfc