Source/WebCore/Modules/webaudio/AudioNode.h
@@ -121,8 +121,8 @@ public:
     AudioNodeOutput* output(unsigned);
 
     // Called from main thread by corresponding JavaScript methods.
-    virtual ExceptionOr<void> connect(AudioNode*, unsigned outputIndex, unsigned inputIndex);
-    ExceptionOr<void> connect(AudioParam*, unsigned outputIndex);
+    virtual ExceptionOr<void> connect(AudioNode&, unsigned outputIndex, unsigned inputIndex);
+    ExceptionOr<void> connect(AudioParam&, unsigned outputIndex);
     virtual ExceptionOr<void> disconnect(unsigned outputIndex);
 
     virtual float sampleRate() const { return m_sampleRate; }
